--- a/SRC/My-Zone/My-Zone/Main.storyboard
+++ b/SRC/My-Zone/My-Zone/Main.storyboard
@@ -548,6 +548,26 @@
                                             <segue destination="8sw-xA-xXT" kind="show" id="ZHY-jl-OuN"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="AjW-pw-wTO" style="IBUITableViewCellStyleDefault" id="mfX-gu-SlJ">
+                                        <rect key="frame" x="0.0" y="132" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mfX-gu-SlJ" id="G4g-7n-seY">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="MMAVAudioRecord" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AjW-pw-wTO">
+                                                    <rect key="frame" x="15" y="0.0" width="325" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="jZQ-FZ-3K8" kind="show" id="ssX-T5-1yM"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -562,7 +582,26 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="59m-nR-OJg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1900" y="6188"/>
+            <point key="canvasLocation" x="1764" y="6846"/>
+        </scene>
+        <!--录音-->
+        <scene sceneID="c1a-l6-rSO">
+            <objects>
+                <viewController id="jZQ-FZ-3K8" customClass="MMAVAudioRecordVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cMU-Ta-Ofc"/>
+                        <viewControllerLayoutGuide type="bottom" id="BPJ-QN-h3B"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="99H-fj-g46">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="录音" id="Mjd-ZX-xN2"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xkd-ZQ-w4f" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2828" y="6953"/>
         </scene>
         <!--System Sound Service-->
         <scene sceneID="QfR-OH-ugu">
